[project]
name = "get-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
name = "get-papers"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with pharma/biotech authors"
authors = ["Tharun Mettala"]
readme = "README.md"
packages = [
    { include = "get_papers", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.83"
pandas = "^2.2"
rich = "^13.7"

[tool.poetry.scripts]
get-papers-list = "get_papers.cli:main"
